--- a/users/build.gradle
+++ b/users/build.gradle
@@ -26,6 +26,7 @@ ext {
 }
 
 dependencies {
+	implementation project('commons')
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
