DKART-3 Updates services to register to eureka server

--- a/eurekaServer/src/main/resources/application.properties
+++ b/eurekaServer/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+# Set the server port
+server.port=8761
+
+# Set the application name
+spring.application.name=eureka-server
+
+# Set the Eureka server hostname
+#eureka.instance.hostname=localhost
+eureka.instance.prefer-ip-address=true
+
+# Disable registering the Eureka server instance with itself
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
