--- a/selllers/src/main/resources/application.properties
+++ b/selllers/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=9191
+spring.application.name=sellers-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.zipkin.base-url=http://localhost:9411
