--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=9090
+spring.application.name=user-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.zipkin.base-url=http://localhost:9411
